# retro-picam

./: .gitignore  CMakeLists.txt  build-debug.sh  build-release.sh  build.sh  build_libcamera.sh  install.sh
cmake-modules/: FindOpenCV.cmake
include/: constants.h
include/core/: result.h
include/gui/: ocv.h
source/: main.cpp
source/gui/: ocv.cpp
